[package]
name = "storm_sd"
version = "0.1.0"
authors = ["lowid <soloradish@gmail.com>"]
edition = "2018"

[dependencies]
clokwerk = "0.2.1"
chrono = "0.4.7"
reqwest = "0.9.19"
snafu = "0.4.4"
serde = "1.0.93"
serde_json = "1.0.40"
simplelog = "0.6.0"
log = "0.4.1"
clap = "2.33.0"
# Add openssl-sys as a direct dependency so it can be cross compiled to
# x86_64-unknown-linux-musl using the "vendored" feature below
openssl-sys = "*"

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]
